fix: popup demo video on mobile devices

--- a/src/pages/Client/Course/course.module.css
+++ b/src/pages/Client/Course/course.module.css
@@ -29,7 +29,6 @@
 }
 
 .videoWrap {
-  margin-top: 4.25rem;
   display: flex;
   align-items: center;
   justify-content: center;
